--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 h1, h2, h3, h4, h5, h6 {
     font-family: "Poppins", sans-serif;
 }
@@ -33,20 +35,30 @@ p {
 
 .menu-item {
     display: inline-block;
-    padding: 10px 0;
+    padding: 5px 0 ;
     font-family: "Poppins", sans-serif;
     font-size: 14px;
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
     margin-left: 24px;
-    transition: 0.5ms;
+    position: relative;
+
 }
 
-.menu-item:hover {
-    border-bottom: 2px solid #2dc997;
+.menu-item:before{
+    content: "";
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    background-color: #2dc997;
+    bottom: 0;
+    transform: scale(0);
+    transition: 0.6s;
 }
-
+.menu-item:hover:before{
+    transform: scale(1);
+}
 .hero {
     background: rgba(0, 0, 0, 0.5) url("../image/hero-bg.jpg") no-repeat top center/cover;
     background-blend-mode: darken;
@@ -272,7 +284,33 @@ p {
     padding: 80px 0;
     text-align: center;
 }
+.portfolio-filters{
+    list-style: none;
+    margin-bottom: 30px;
 
+}
+.filter{
+    display: inline-block;
+    background-color: #fff;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 4px;
+}
+.filter-link{
+    display: inline-block;
+    text-decoration: none;
+    color: #666;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 18px;
+    border-radius: 4px;
+}
+
+.filter-link:hover{
+    color: #fff;
+    background-color: #2dc997;
+}
 
 .portfolio .row {
     display: flex;
@@ -369,12 +407,59 @@ p {
 
 .team-img {
     max-width: 100%;
-    transition: 0.9s;
+
 }
 
-.team-card:hover .team-img {
-    transform: scale(1.2);
+.team-card:hover .team-card-item {
+    transform: scale(0.8);
 }
+.team-card-item{
+    position: relative;
+    transition: 0.9s;
+}
+.team-card-item:before{
+    content: "";
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    border-left: 3px solid #2dc997;
+    border-top: 3px solid #2dc997;
+    left: -10px;
+    top: -10px;
+}
+
+.team-card-item:after{
+    content: "";
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    border-right: 3px solid #2dc997;
+    border-top: 3px solid #2dc997;
+    right: -10px;
+    top: -10px;
+}
+
+.team-card-item-next:before{
+    content: "";
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    border-left: 3px solid #2dc997;
+    border-bottom: 3px solid #2dc997;
+    left: -10px;
+    bottom: -10px;
+}
+.team-card-item-next:after{
+    content: "";
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    border-right: 3px solid #2dc997;
+    border-bottom: 3px solid #2dc997;
+    right: -10px;
+    bottom: -10px;
+}
+
 
 .social-item {
     text-decoration: none;
