--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,10 @@ h1, h2, h3, h4, h5, h6 {
 p {
     font-family: "Open Sans", sans-serif;
 }
-/*img{*/
-/*    max-width: 100%;*/
-/*}*/
+
 .container {
     max-width: 1170px;
+    padding: 10px;
     margin: 0 auto;
 }
 
