--- a/css/media.css
+++ b/css/media.css
@@ -50,7 +50,12 @@
     .container {
         width: 530px;
     }
-
+    .burger{
+        display: block;
+    }
+    .menu{
+        display: none;
+    }
     .hero-title {
         font-size: 40px;
     }
@@ -94,9 +99,9 @@
 }
 
 @media (max-width: 576px) {
-    .container {
-        width: 315px;
-    }
+    /*.container {*/
+    /*    width: 315px;*/
+    /*}*/
 
     .menu {
         display: none;
