--- a/css/media.css
+++ b/css/media.css
@@ -52,9 +52,24 @@
     }
     .burger{
         display: block;
+        z-index: 5;
     }
     .menu{
-        display: none;
+        position: fixed;
+        background: black;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: -100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        transition: 0.4s;
+        z-index: 5;
+    }
+    .menu.show{
+        left: 0;
     }
     .hero-title {
         font-size: 40px;
@@ -99,12 +114,9 @@
 }
 
 @media (max-width: 576px) {
-    /*.container {*/
-    /*    width: 315px;*/
-    /*}*/
-
-    .menu {
-        display: none;
+    .container {
+        width: 315px;
+        padding: 10px;
     }
 
     .logo-img {
