--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ p {
 
 .container {
     max-width: 1170px;
-    padding: 10px;
+
     margin: 0 auto;
 }
 
@@ -554,4 +554,8 @@ p {
     display: none;
     font-size: 28px;
     color: #fff;
+}
+
+.o-hidden{
+    overflow: hidden;
 }
